--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     </script>
     <meta id="viewport" name="viewport"
         content="width=420,user-scalable=no,initial-scale=4.571428571428571,minimum-scale=4.571428571428571,maximum-scale=4.571428571428571" />
-    <link rel="canonical" href="https://www.mewedding.online/giao-dien-sleazy-vip" />
-    <meta property="og:url" content="https://www.mewedding.online/giao-dien-sleazy-vip" />
+    <!-- <link rel="canonical" href="https://www.mewedding.online/giao-dien-sleazy-vip" />
+    <meta property="og:url" content="https://www.mewedding.online/giao-dien-sleazy-vip" /> -->
     <meta property="og:type" content="website" />
     <meta property="og:image"
         content="https://static.ladipage.net/5c728619c417ab07e5194baa/z5509894719740_230c5a81df1b51d2590353df117474c9-20240605084126-v_dyu.jpg" />
@@ -6363,11 +6363,11 @@
                         <div class="ladi-notify-image">
                             <img src="https://w.ladicdn.com/source/notify.svg?v=1.0" />
                         </div>
-                        <div class="ladi-notify-title">Bạn Thân</div>
+                        <!-- <div class="ladi-notify-title">Bạn Thân</div>
                         <div class="ladi-notify-content">
                             Chúc vợ chồng bạn mãi mãi hạnh phúc nhé
                         </div>
-                        <div class="ladi-notify-time">Bạn Dâu Rể</div>
+                        <div class="ladi-notify-time">Bạn Dâu Rể</div> -->
                     </div>
                 </div>
                 <div id="GROUP54" class="ladi-element">
@@ -7590,248 +7590,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div id="POPUP20" class="ladi-element">
-                    <div class="ladi-popup">
-                        <div class="ladi-popup-background"></div>
-                        <div id="IMAGE49" class="ladi-element">
-                            <div class="ladi-image ladi-transition">
-                                <div class="ladi-image-background ladi-lazyload"></div>
-                            </div>
-                        </div>
-                        <div id="BOX74" class="ladi-element">
-                            <div class="ladi-box ladi-transition ladi-lazyload"></div>
-                        </div>
-                        <div id="HEADLINE112" class="ladi-element">
-                            <h3 class="ladi-headline ladi-transition ladi-lazyload">
-                                Cảm ơn <span data-replace-str="!::name::!"></span> đã gửi lời
-                                chúc đến hai vợ chồng
-                            </h3>
-                        </div>
-                        <div id="HEADLINE113" class="ladi-element">
-                            <h3 class="ladi-headline ladi-transition ladi-lazyload">
-                                Thank you!
-                            </h3>
-                        </div>
-                        <div id="PARAGRAPH155" class="ladi-element">
-                            <div class="ladi-paragraph ladi-transition">
-                                Bạn hiền hãy nhớ "Xác nhận tham dự" đám cưới của tụi mình nhé,
-                                hai vợ chồng rất mong sẽ có mặt bạn trong ngày hạnh phúc của
-                                chúng mình đó nhé&nbsp;<br />❤️❤️❤️<br />
-                            </div>
-                        </div>
-                        <div data-action="true" id="BUTTON41" class="ladi-element">
-                            <div class="ladi-button">
-                                <div class="ladi-button-background ladi-lazyload"></div>
-                                <div id="BUTTON_TEXT41" class="ladi-element ladi-button-headline">
-                                    <p class="ladi-headline ladi-lazyload">Xác nhận tham dự</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div data-action="true" id="BUTTON42" class="ladi-element">
-                            <div class="ladi-button">
-                                <div class="ladi-button-background ladi-lazyload"></div>
-                                <div id="BUTTON_TEXT42" class="ladi-element ladi-button-headline">
-                                    <p class="ladi-headline ladi-lazyload">Mừng Cưới</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div id="SHAPE78" class="ladi-element">
-                            <div class="ladi-shape">
-                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                                    version="1.1" x="0px" y="0px" viewBox="0 0 100 100"
-                                    enable-background="new 0 0 100 100" xml:space="preserve" preserveAspectRatio="none"
-                                    width="100%" height="100%" class="" fill="rgba(194, 154, 98, 1.0)">
-                                    <g>
-                                        <path
-                                            d="M46.14,21.251c2.837-5.016,7.784-9.885,8.084-15.649c0.149-2.876-2.667-6.158-6.355-3.792   c-2.477,1.591-3.666,4.724-4.066,7.545c-1.405-2.553-3.907-5.119-6.854-5.859c-4.255-1.067-5.171,2.477-4.111,5.158   C34.959,14.021,41.852,17.399,46.14,21.251z">
-                                        </path>
-                                        <path
-                                            d="M55.039,26.487c0.868-0.22,1.755-0.341,2.656-0.341c4.95,0,9.618,3.503,11.2,7.964   c5.129-1.71,10.475-3.554,13.907-6.85c6.041-5.798,2.038-12.111-2.767-11.999c-3.759,0.096-6.826,2.729-9.091,3.835   c-2.351-8.982-12.62-14.337-16.645-2.876C53.114,19.596,53.803,23.082,55.039,26.487z">
-                                        </path>
-                                        <path
-                                            d="M95.479,48.019c-0.242-3.862-7.521-11.822-11.84-16.224l-0.453-0.462l-3.983,3.908l0.452,0.463   c3.428,3.493,6.868,7.477,8.783,10.155L60.561,63.955c-0.936-0.924-1.757-1.741-2.467-2.454c3.734-7.185,8.834-17.309,8.327-24.603   c-0.37-5.337-7.941-10.789-14.084-5.66c-4.127,3.441-4.743,5.755-4.836,11.044c-3.11-4.419-4.589-6.652-10.085-7.413   c-7.925-1.094-11.499,7.334-8.985,12.06c2.091,3.926,8.335,9.675,13.177,13.245l-4.095,3.001L15.187,39.432   c0.138-0.121,0.262-0.229,0.365-0.318c0.791-0.675,1.587-1.346,2.383-2.015l19.918-16.717l-3.607-4.26L14.344,32.826   c-0.808,0.679-1.615,1.36-2.414,2.042c-0.599,0.511-2.518,2.245-2.935,2.707c-1.185,1.309-1.491,3.467-1.646,5.603l-0.017,0.205   c-0.056,0.619-0.267,3.275-0.319,3.992L4.511,85.154c0,4.554,3.44,6.673,5.312,7.168l0.408,0.071   c47.197,4.386,74.181,6.57,74.445,6.592C84.838,98.996,84.997,99,85.153,99c4.665-0.002,6.55-3.895,6.899-6.006l0.032-0.406   c0-13.083,3.03-40.912,3.381-44.082l0.023-0.299L95.479,48.019z M32.978,66.498L10.232,83.162l2.349-35.394   c0.033-0.455,0.135-1.738,0.215-2.731L32.978,66.498z M64.641,67.961l24.854-16.135c-0.888,8.416-2.611,25.875-2.937,37.334   C81.701,84.49,71.914,75.064,64.641,67.961z M45.468,64.266c1.079-0.777,2.281-1.172,3.573-1.172c1.822,0,3.339,0.785,3.856,1.087   c4.906,5.047,22.669,22.156,29.836,29.047c-7.475-0.618-31.026-2.599-68.513-6.069l27.566-20.194   c2.187-1.603,3.196-2.344,3.641-2.756L45.468,64.266z">
-                                        </path>
-                                    </g>
-                                </svg>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div id="POPUP21" class="ladi-element">
-                    <div class="ladi-popup">
-                        <div class="ladi-popup-background"></div>
-                        <div class="ladi-overlay ladi-lazyload"></div>
-                        <div id="IMAGE50" class="ladi-element ladi-animation-hidden">
-                            <div class="ladi-image">
-                                <div class="ladi-image-background ladi-lazyload"></div>
-                            </div>
-                        </div>
-                        <div id="HEADLINE116" class="ladi-element">
-                            <h3 class="ladi-headline ladi-lazyload">Hộp mừng cưới</h3>
-                        </div>
-                        <div id="PARAGRAPH156" class="ladi-element">
-                            <div class="ladi-paragraph">
-                                Cảm ơn tất cả các tình cảm mà các em, các bạn, các anh các chị
-                                đã dành cho Thịnh &amp; Hằng
-                            </div>
-                        </div>
-                        <div data-action="true" id="GROUP113" class="ladi-element">
-                            <div class="ladi-group">
-                                <div id="BOX75" class="ladi-element">
-                                    <div class="ladi-box ladi-transition ladi-lazyload"></div>
-                                </div>
-                                <div id="HEADLINE117" class="ladi-element">
-                                    <h3 class="ladi-headline ladi-lazyload">
-                                        MỪNG CƯỚI ĐẾN<br />CHÚ RỂ
-                                    </h3>
-                                </div>
-                                <div id="PARAGRAPH157" class="ladi-element">
-                                    <div class="ladi-paragraph">
-                                        Ngân hàng: ACB<br />STK : 3413 888 88<br />Tên : Nguyễn
-                                        Xuân Thịnh<br />Chi nhánh : Hà Nội<br />
-                                    </div>
-                                </div>
-                                <a href="https://w.ladicdn.com/5c728619c417ab07e5194baa/3374504a-4ad7-43bd-9f40-963fd0fc7cc2-20240115140659-lxtxi.jpg"
-                                    id="BUTTON43" class="ladi-element"
-                                    data-replace-href="https://w.ladicdn.com/5c728619c417ab07e5194baa/3374504a-4ad7-43bd-9f40-963fd0fc7cc2-20240115140659-lxtxi.jpg">
-                                    <div class="ladi-button">
-                                        <div class="ladi-button-background ladi-lazyload"></div>
-                                        <div id="BUTTON_TEXT43" class="ladi-element ladi-button-headline">
-                                            <p class="ladi-headline ladi-lazyload">Tải ảnh QR</p>
-                                        </div>
-                                    </div>
-                                </a>
-                                <div data-action="true" id="BUTTON44" class="ladi-element">
-                                    <div class="ladi-button">
-                                        <div class="ladi-button-background ladi-lazyload"></div>
-                                        <div id="BUTTON_TEXT44" class="ladi-element ladi-button-headline">
-                                            <p class="ladi-headline ladi-lazyload">
-                                                Coppy STK<br />
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <a href="https://www.messenger.com/t/thinh.mrjack/" target="_blank" id="PARAGRAPH158"
-                                    class="ladi-element" data-replace-href="https://www.messenger.com/t/thinh.mrjack/">
-                                    <div class="ladi-paragraph">
-                                        &gt;&gt; Gửi ảnh phong bì đến chú rể
-                                    </div>
-                                </a>
-                                <div data-action="true" id="IMAGE51" class="ladi-element">
-                                    <div class="ladi-image">
-                                        <div class="ladi-image-background ladi-lazyload"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div data-action="true" id="GROUP114" class="ladi-element">
-                            <div class="ladi-group">
-                                <div id="BOX76" class="ladi-element">
-                                    <div class="ladi-box ladi-transition ladi-lazyload"></div>
-                                </div>
-                                <div id="PARAGRAPH159" class="ladi-element">
-                                    <div class="ladi-paragraph">
-                                        Ngân hàng: MB<br />STK : 2908 1998 8686<br />Tên : Nghiêm
-                                        Thị Hằng<br />Chi nhánh : Hà Nội<br />
-                                    </div>
-                                </div>
-                                <a href="https://w.ladicdn.com/5c728619c417ab07e5194baa/9d7aeb86-17a1-4402-9b51-909edb336960-20240115134458-bwex7.jpg"
-                                    id="BUTTON45" class="ladi-element"
-                                    data-replace-href="https://w.ladicdn.com/5c728619c417ab07e5194baa/9d7aeb86-17a1-4402-9b51-909edb336960-20240115134458-bwex7.jpg">
-                                    <div class="ladi-button">
-                                        <div class="ladi-button-background ladi-lazyload"></div>
-                                        <div id="BUTTON_TEXT45" class="ladi-element ladi-button-headline">
-                                            <p class="ladi-headline ladi-lazyload">Tải ảnh QR</p>
-                                        </div>
-                                    </div>
-                                </a>
-                                <div data-action="true" id="BUTTON46" class="ladi-element">
-                                    <div class="ladi-button">
-                                        <div class="ladi-button-background ladi-lazyload"></div>
-                                        <div id="BUTTON_TEXT46" class="ladi-element ladi-button-headline">
-                                            <p class="ladi-headline ladi-lazyload">
-                                                Coppy STK<br />
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div id="HEADLINE122" class="ladi-element">
-                                    <h3 class="ladi-headline ladi-lazyload">
-                                        MỪNG CƯỚI ĐẾN<br />CÔ DÂU
-                                    </h3>
-                                </div>
-                                <a href="https://www.messenger.com/t/nghiemhangg/" target="_blank" id="PARAGRAPH160"
-                                    class="ladi-element" data-replace-href="https://www.messenger.com/t/nghiemhangg/">
-                                    <div class="ladi-paragraph">
-                                        &gt;&gt; Gửi ảnh phong bì đến cô dâu
-                                    </div>
-                                </a>
-                                <div data-action="true" id="IMAGE52" class="ladi-element">
-                                    <div class="ladi-image">
-                                        <div class="ladi-image-background ladi-lazyload"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div id="POPUP22" class="ladi-element">
-                    <div class="ladi-popup">
-                        <div class="ladi-popup-background"></div>
-                        <div id="GROUP115" class="ladi-element">
-                            <div class="ladi-group">
-                                <div id="HEADLINE123" class="ladi-element ladi-animation-hidden">
-                                    <h3 class="ladi-headline ladi-transition ladi-lazyload">
-                                        Video Cưới<br />
-                                    </h3>
-                                </div>
-                                <div id="SHAPE80" class="ladi-element ladi-animation-hidden">
-                                    <div class="ladi-shape ladi-transition">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"
-                                            preserveAspectRatio="none" viewBox="0 0 356.13 42.62" class=""
-                                            fill="rgba(100, 98, 98, 1.0)">
-                                            <use xlink:href="#shape_SnLYxaSGwd"></use>
-                                        </svg>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div id="PARAGRAPH163" class="ladi-element ladi-animation-hidden">
-                            <div class="ladi-paragraph">
-                                Chúng tôi luôn có những kỷ niệm tuyệt vời cùng nhau, dù ở bất
-                                cứ đâu, hay là bất cứ khi nào ♥️
-                            </div>
-                        </div>
-                        <div id="VIDEO10" class="ladi-element ladi-animation-hidden">
-                            <div class="ladi-video">
-                                <div class="ladi-video-background ladi-lazyload"></div>
-                                <div id="SHAPE10" class="ladi-element">
-                                    <div class="ladi-shape">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"
-                                            preserveAspectRatio="none" viewBox="0 0 408.7 408.7"
-                                            fill="rgba(0, 0, 0, 0.5)">
-                                            <use xlink:href="#shape_CCqjQQozRw"></use>
-                                        </svg>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div id="VIDEO11" class="ladi-element ladi-animation-hidden">
-                            <div class="ladi-video">
-                                <div class="ladi-video-background ladi-lazyload"></div>
-                                <div id="SHAPE11" class="ladi-element">
-                                    <div class="ladi-shape">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"
-                                            preserveAspectRatio="none" viewBox="0 0 408.7 408.7"
-                                            fill="rgba(0, 0, 0, 0.5)">
-                                            <use xlink:href="#shape_CCqjQQozRw"></use>
-                                        </svg>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
                 <div id="POPUP23" class="ladi-element">
                     <div class="ladi-popup">
                         <div class="ladi-popup-background"></div>
