--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     </script>
     <meta id="viewport" name="viewport"
         content="width=420,user-scalable=no,initial-scale=4.571428571428571,minimum-scale=4.571428571428571,maximum-scale=4.571428571428571" />
-    <!-- <link rel="canonical" href="https://www.mewedding.online/giao-dien-sleazy-vip" />
-    <meta property="og:url" content="https://www.mewedding.online/giao-dien-sleazy-vip" /> -->
+    <link rel="canonical" href="https://www.mewedding.online/giao-dien-sleazy-vip" />
+    <meta property="og:url" content="https://www.mewedding.online/giao-dien-sleazy-vip" />
     <meta property="og:type" content="website" />
     <meta property="og:image"
         content="https://static.ladipage.net/5c728619c417ab07e5194baa/z5509894719740_230c5a81df1b51d2590353df117474c9-20240605084126-v_dyu.jpg" />
@@ -6363,11 +6363,10 @@
                         <div class="ladi-notify-image">
                             <img src="https://w.ladicdn.com/source/notify.svg?v=1.0" />
                         </div>
-                        <!-- <div class="ladi-notify-title">Bạn Thân</div>
+                        <div class="ladi-notify-title"></div>
                         <div class="ladi-notify-content">
-                            Chúc vợ chồng bạn mãi mãi hạnh phúc nhé
                         </div>
-                        <div class="ladi-notify-time">Bạn Dâu Rể</div> -->
+                        <div class="ladi-notify-time"></div>
                     </div>
                 </div>
                 <div id="GROUP54" class="ladi-element">
