--- a/index.html
+++ b/index.html
@@ -3097,7 +3097,7 @@
             height: 230.5px;
             top: -16px;
             left: -9px;
-            background-image: url("/LMH_1468.JPG");
+            background-image: url("LMH_1468.JPG");
         }
 
         #IMAGE5>.ladi-image,
