--- a/index.html
+++ b/index.html
@@ -1688,7 +1688,7 @@
             height: 841.5px;
             top: 0px;
             left: -78px;
-            background-image: url("/LMH_1613.JPG");
+            background-image: url("LMH_1613.JPG");
         }
 
         #HEADLINE8,
@@ -3198,11 +3198,11 @@
         }
 
         #IMAGE6>.ladi-image>.ladi-image-background {
-            /* width: 145.667px;
-            height: 218.5px; */
+            width: 145.667px;
+            height: 218.5px;
             top: 0px;
             left: -3.33339px;
-            background-image: url("/LMH_1238.JPG");
+            background-image: url("LMH_1238.JPG");
         }
 
         #GROUP8 {
@@ -3220,7 +3220,7 @@
             height: 213.125px;
             top: -10px;
             left: 4.2e-5px;
-            background-image: url("/LMH_1792.JPG");
+            background-image: url("LMH_1792.JPG");
         }
 
         #GROUP9 {
@@ -3238,7 +3238,7 @@
             height: 224.5px;
             top: -20px;
             left: -6.3333px;
-            background-image: url("/LMH_1222.JPG");
+            background-image: url("LMH_1222.JPG");
         }
 
         #GROUP10 {
@@ -3304,7 +3304,7 @@
             height: 292.467px;
             top: -20.0365px;
             left: -15.2367px;
-            background-image: url("/album/LMH_1146.JPG");
+            background-image: url("album/LMH_1146.JPG");
         }
 
         #IMAGE11 {
@@ -3317,7 +3317,7 @@
             height: 270.985px;
             top: -56.0365px;
             left: -9.90329px;
-            background-image: url("/album/LMH_1898.JPG");
+            background-image: url("album/LMH_1898.JPG");
         }
 
         #IMAGE11.ladi-animation>.ladi-image,
@@ -3341,7 +3341,7 @@
             height: 283.217px;
             top: -20.0365px;
             left: -12.9033px;
-            background-image: url("/album/LMH_2021.JPG");
+            background-image: url("album/LMH_2021.JPG");
         }
 
         #IMAGE13 {
@@ -3354,7 +3354,7 @@
             height: 277.467px;
             top: -12.0365px;
             left: -10.5699px;
-            background-image: url("/album/LMH_1455.JPG");
+            background-image: url("album/LMH_1455.JPG");
         }
 
         #IMAGE14 {
@@ -3367,7 +3367,7 @@
             height: 280.217px;
             top: -46.0365px;
             left: -12.9034px;
-            background-image: url("/album/LMH_1559.JPG");
+            background-image: url("album/LMH_1559.JPG");
         }
 
         #IMAGE15 {
@@ -3380,7 +3380,7 @@
             height: 302.967px;
             top: -48.037px;
             left: -18.57px;
-            background-image: url("/album/LMH_2044.JPG");
+            background-image: url("album/LMH_2044.JPG");
         }
 
         #IMAGE16 {
@@ -3393,7 +3393,7 @@
             height: 285.985px;
             top: -53.0365px;
             left: -15px;
-            background-image: url("/album/LMH_2178.JPG");
+            background-image: url("album/LMH_2178.JPG");
         }
 
         #IMAGE17 {
@@ -3406,7 +3406,7 @@
             height: 278.985px;
             top: -25.0365px;
             left: -11.9033px;
-            background-image: url("/album/LMH_1564.JPG");
+            background-image: url("album/LMH_1564.JPG");
         }
 
         #IMAGE18 {
@@ -3810,7 +3810,7 @@
             height: 882.266px;
             top: -73px;
             left: -100.167px;
-            background-image: url("/LMH_0905.JPG");
+            background-image: url("LMH_0905.JPG");
         }
 
         #IMAGE24.ladi-animation>.ladi-image,
@@ -4786,7 +4786,7 @@
             height: 647px;
             top: -78px;
             left: -63.25px;
-            background-image: url("/LMH_1468.JPG");
+            background-image: url("LMH_1468.JPG");
         }
 
         #IMAGE30.ladi-animation>.ladi-image {
@@ -8582,7 +8582,7 @@
           "cs": [
             {
               "dr": "action",
-              "dC": "/LMH_1468.JPG",
+              "dC": "LMH_1468.JPG",
               "dF": "image",
               "a": "lightbox"
             }
@@ -8596,7 +8596,7 @@
           "cs": [
             {
               "dr": "action",
-              "dC": "/LMH_1238.JPG",
+              "dC": "LMH_1238.JPG",
               "dF": "image",
               "a": "lightbox"
             }
@@ -8612,7 +8612,7 @@
           "cs": [
             {
               "dr": "action",
-              "dC": "/LMH_1792.JPG",
+              "dC": "LMH_1792.JPG",
               "dF": "image",
               "a": "lightbox"
             }
@@ -8627,7 +8627,7 @@
           "cs": [
             {
               "dr": "action",
-              "dC": "/LMH_1222.JPG",
+              "dC": "LMH_1222.JPG",
               "dF": "image",
               "a": "lightbox"
             }
@@ -8643,7 +8643,7 @@
           "cs": [
             {
               "dr": "action",
-              "dC": "/album/LMH_1146.JPG",
+              "dC": "album/LMH_1146.JPG",
               "dF": "image",
               "a": "lightbox"
             }
@@ -8656,7 +8656,7 @@
           "cs": [
             {
               "dr": "action",
-              "dC": "/album/LMH_1898.JPG",
+              "dC": "album/LMH_1898.JPG",
               "dF": "image",
               "a": "lightbox"
             }
@@ -8669,7 +8669,7 @@
           "cs": [
             {
               "dr": "action",
-              "dC": "/album/LMH_2021.JPG",
+              "dC": "album/LMH_2021.JPG",
               "dF": "image",
               "a": "lightbox"
             }
@@ -8682,7 +8682,7 @@
           "cs": [
             {
               "dr": "action",
-              "dC": "/album/LMH_1455.JPG",
+              "dC": "album/LMH_1455.JPG",
               "dF": "image",
               "a": "lightbox"
             }
@@ -8695,7 +8695,7 @@
           "cs": [
             {
               "dr": "action",
-              "dC": "/album/LMH_1559.JPG",
+              "dC": "album/LMH_1559.JPG",
               "dF": "image",
               "a": "lightbox"
             }
@@ -8708,7 +8708,7 @@
           "cs": [
             {
               "dr": "action",
-              "dC": "/album/LMH_2044.JPG",
+              "dC": "album/LMH_2044.JPG",
               "dF": "image",
               "a": "lightbox"
             }
@@ -8721,7 +8721,7 @@
           "cs": [
             {
               "dr": "action",
-              "dC": "/album/LMH_2178.JPG",
+              "dC": "album/LMH_2178.JPG",
               "dF": "image",
               "a": "lightbox"
             }
@@ -8734,7 +8734,7 @@
           "cs": [
             {
               "dr": "action",
-              "dC": "/album/LMH_1564.JPG",
+              "dC": "album/LMH_1564.JPG",
               "dF": "image",
               "a": "lightbox"
             }
