--- a/index.html
+++ b/index.html
@@ -6970,9 +6970,7 @@
                                 GIA</div>
                         </div>
                         <div id="PARAGRAPH217" class="ladi-element">
-                            <div class="ladi-paragraph ladi-transition">Hồng
-                                Tiến - Trực
-                                Hưng - Trực Ninh - Nam Định<br></div>
+                            <div class="ladi-paragraph ladi-transition">Khu 13 - Vạn Xuân - Tam Nông - <br> Phú Thọ<br></div>
                         </div>
                         <div id="PARAGRAPH227" class="ladi-element">
                             <div class="ladi-paragraph ladi-transition">Vào
@@ -6989,8 +6987,7 @@
                                             </div>
                                         </div>
                                         <div id="PARAGRAPH237" class="ladi-element">
-                                            <div class="ladi-paragraph ladi-transition">Chủ
-                                                Nhật</div>
+                                            <div class="ladi-paragraph ladi-transition">Thứ Bảy</div>
                                         </div>
                                         <div id="LINE57" class="ladi-element">
                                             <div class="ladi-line">
@@ -7000,7 +6997,7 @@
                                     </div>
                                 </div>
                                 <div id="PARAGRAPH247" class="ladi-element">
-                                    <div class="ladi-paragraph ladi-transition">19/05</div>
+                                    <div class="ladi-paragraph ladi-transition">12/04</div>
                                 </div>
                                 <div id="GROUP237" class="ladi-element">
                                     <div class="ladi-group">
@@ -7010,7 +7007,7 @@
                                             </div>
                                         </div>
                                         <div id="PARAGRAPH257" class="ladi-element">
-                                            <div class="ladi-paragraph ladi-transition">2024</div>
+                                            <div class="ladi-paragraph ladi-transition">2025</div>
                                         </div>
                                         <div id="LINE77" class="ladi-element">
                                             <div class="ladi-line">
@@ -7023,8 +7020,8 @@
                         </div>
                         <div id="PARAGRAPH267" class="ladi-element">
                             <div class="ladi-paragraph ladi-transition">Tức
-                                ngày 12 tháng
-                                4 năm Giáp Thìn<br></div>
+                                ngày 15 tháng
+                                3 năm Ất Tỵ<br></div>
                         </div>
                         <!-- <div data-action="true" id="GROUP287" class="ladi-element">
                             <div class="ladi-group"><a href="tel:0848753999" id="GROUP25" class="ladi-element">
@@ -7099,12 +7096,10 @@
                         <div id="PARAGRAPH277" class="ladi-element">
                             <div class="ladi-paragraph ladi-transition">TƯ
                                 GIA NHÀ
-                                TRAI</div>
+                                GÁI</div>
                         </div>
                         <div id="PARAGRAPH287" class="ladi-element">
-                            <div class="ladi-paragraph ladi-transition">Hồng
-                                Tiến - Trực
-                                Hưng - Trực Ninh - Nam Định<br></div>
+                            <div class="ladi-paragraph ladi-transition">Khu 1 - Quang Húc - Tam Nông - <br> Phú Thọ<br></div>
                         </div>
                         <div id="PARAGRAPH297" class="ladi-element">
                             <div class="ladi-paragraph ladi-transition">Vào
@@ -7121,8 +7116,7 @@
                                             </div>
                                         </div>
                                         <div id="PARAGRAPH307" class="ladi-element">
-                                            <div class="ladi-paragraph ladi-transition">Chủ
-                                                Nhật</div>
+                                            <div class="ladi-paragraph ladi-transition">Thứ Bảy</div>
                                         </div>
                                         <div id="LINE97" class="ladi-element">
                                             <div class="ladi-line">
@@ -7132,7 +7126,7 @@
                                     </div>
                                 </div>
                                 <div id="PARAGRAPH317" class="ladi-element">
-                                    <div class="ladi-paragraph ladi-transition">19/05</div>
+                                    <div class="ladi-paragraph ladi-transition">12/04</div>
                                 </div>
                                 <div id="GROUP337" class="ladi-element">
                                     <div class="ladi-group">
@@ -7142,7 +7136,7 @@
                                             </div>
                                         </div>
                                         <div id="PARAGRAPH327" class="ladi-element">
-                                            <div class="ladi-paragraph ladi-transition">2024</div>
+                                            <div class="ladi-paragraph ladi-transition">2025</div>
                                         </div>
                                         <div id="LINE117" class="ladi-element">
                                             <div class="ladi-line">
@@ -7155,8 +7149,8 @@
                         </div>
                         <div id="PARAGRAPH337" class="ladi-element">
                             <div class="ladi-paragraph ladi-transition">Tức
-                                ngày 12 tháng
-                                4 năm Giáp Thìn<br></div>
+                                ngày 15 tháng
+                                3 năm Ất Tỵ<br></div>
                         </div>
                         <!-- <div data-action="true" id="GROUP34" class="ladi-element">
                             <div class="ladi-group"><a href="tel:0848753999" id="GROUP35" class="ladi-element">
