--- a/index.html
+++ b/index.html
@@ -5121,13 +5121,13 @@
 
         #POPUP15 {
             width: 402.664px;
-            height: 567px;
+            height: 600px;
         }
 
         #IMAGE42,
         #IMAGE42>.ladi-image>.ladi-image-background {
             width: 402.664px;
-            height: 566.951px;
+            height: 600px;
         }
 
         #IMAGE42>.ladi-image>.ladi-image-background {
@@ -5345,7 +5345,7 @@
 
         #PARAGRAPH147 {
             width: 280px;
-            top: 540.951px;
+            top: 570.951px;
             left: 61.332px;
         }
 
@@ -8278,8 +8278,7 @@
                         <div id="GROUP109" class="ladi-element">
                             <div class="ladi-group">
                                 <div id="PARAGRAPH71" class="ladi-element">
-                                    <div class="ladi-paragraph">Thứ
-                                        Hai</div>
+                                    <div class="ladi-paragraph">Thứ Bảy</div>
                                 </div>
                                 <div id="LINE20" class="ladi-element">
                                     <div class="ladi-line">
@@ -8287,7 +8286,7 @@
                                     </div>
                                 </div>
                                 <div id="PARAGRAPH72" class="ladi-element">
-                                    <div class="ladi-paragraph">09</div>
+                                    <div class="ladi-paragraph">12</div>
                                 </div>
                                 <div id="LINE21" class="ladi-element">
                                     <div class="ladi-line">
@@ -8296,13 +8295,13 @@
                                 </div>
                                 <div id="PARAGRAPH73" class="ladi-element">
                                     <div class="ladi-paragraph">Tháng
-                                        9</div>
+                                        4</div>
                                 </div>
                                 <div id="PARAGRAPH74" class="ladi-element">
-                                    <div class="ladi-paragraph">2024</div>
+                                    <div class="ladi-paragraph">2025</div>
                                 </div>
                                 <div id="PARAGRAPH109" class="ladi-element">
-                                    <div class="ladi-paragraph">11:30</div>
+                                    <div class="ladi-paragraph">10:30</div>
                                 </div>
                             </div>
                         </div>
@@ -8336,9 +8335,10 @@
                         </div>
                         <div id="PARAGRAPH146" class="ladi-element">
                             <div class="ladi-paragraph">
-                                Tại : Tư Gia nhà Gái <br />Hồ Bơi Sơn Khôi -
-                                Lai Uyên - Bàu
-                                Bàng - Bình Dương<br />
+                                Tại : Tư Gia nhà Trai <br />Khu 13 - Vạn Xuân - Tam Nông - Phú Thọ<br />
+                            </div>
+                            <div class="ladi-paragraph">
+                                Tại : Tư Gia nhà Gái <br />Khu 1 - Quang Húc - Tam Nông - Phú Thọ<br />
                             </div>
                         </div>
                         <div id="PARAGRAPH147" class="ladi-element">
